Bug 419701 - "Hitting "Cancel" on custom Header/Footer dialog replaces original setting with --blank--" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=beltzner]